tests/Fixtures/Torture/Bad/thread_mode_not_allowed.g
// EXPECT G043
// foreground or background modifiers are not allowed on thread declarations.
kernel { entry func Main() {} }
user {
  foreground process App {
    background thread Worker { entry func Run() {} }
  }
}
